--- a/client/style.css
+++ b/client/style.css
@@ -15,7 +15,7 @@ body {
   top: 0;
   width: 100%;
   height: 100vh;
-  background: gray;
+  background: #232423;
 }
 #loading {
   text-align: center;
